remove if statements

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -19,9 +19,7 @@
   {% endblock %}
 
   {# FAVICON #}
-  {% if favicon %}
-    <link rel="shortcut icon" href="{{ pathto('_static/images' + favicon, 1) }}"/>
-  {% endif %}
+    <link rel="shortcut icon" href="{{ pathto('_static/images/favicon.ico', 1) }}"/>
 
   {# CSS #}
 
